methods.basics.Methods.scala.code
def goAndGet() {
var a=0
}

for (i <- 1 to 7) {
    if (!estSurBiscuit) {
      a = a + 1
      avance()
    	}
}
prendBiscuit()
